--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "typescript": "~4.1.5"
   },
   "peerDependencies": {
+    "@ledgerhq/devices": "^8.0.0",
+    "@ledgerhq/hw-transport": "^6.0.0",
     "@capacitor/core": "^6.0.0"
   },
   "prettier": "@ionic/prettier-config",
