--- a/package.json
+++ b/package.json
@@ -62,9 +62,9 @@
     "typescript": "~4.1.5"
   },
   "peerDependencies": {
+    "@capacitor/core": ">=7.0.0",
     "@ledgerhq/devices": "^8.0.0",
-    "@ledgerhq/hw-transport": "^6.0.0",
-    "@capacitor/core": ">=7.0.0"
+    "@ledgerhq/hw-transport": "^6.0.0"
   },
   "prettier": "@ionic/prettier-config",
   "swiftlint": "@ionic/swiftlint-config",
